# virtual-iss

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  go.mod  pyproject.toml
bus/: nats.conf  subjects.go  types.go
configs/: cdh.toml  comms.toml  crew.toml  eclss.toml  eps.toml  gnc.toml  iss.toml  mdm.toml  orbit.toml  robotics.toml  thermal.toml
configs/scenarios/: fault_injection_test.json  load_shed_test.json  nominal_ops.json  toaster_impact.json
docs/: ARCHITECTURE.md  SCENARIOS.md  SUBSYSTEMS.md
dynamics/: Cargo.toml  Dockerfile
dynamics/src/: attitude.rs  engine.rs  environment.rs  lib.rs  main.rs  orbit.rs  vehicle.rs
gnc/: Cargo.toml  Dockerfile
gnc/src/: control.rs  controller.rs  estimator.rs  lib.rs  main.rs  sensors.rs  steering.rs
orchestrator/: Dockerfile  main.py  orchestrator.py  requirements.txt  scenario.py
scripts/: build.sh  run.sh  seed.sh
subsystems/cdh/: Dockerfile  cmd_handler.py  limit_checker.py  main.py  requirements.txt  simulator.py  tlm_packer.py
subsystems/comms/: Dockerfile  go.mod  rf_links.go  simulator.go  tdrs.go
subsystems/comms/cmd/: main.go
subsystems/crew/: Dockerfile  consumables.py  main.py  simulator.py  timeline.py
subsystems/eclss/: Dockerfile  cabin_atmo.py  co2_scrub.py  main.py  o2_gen.py  simulator.py  water_recovery.py
subsystems/eps/: Dockerfile  battery.go  distribution.go  go.mod  simulator.go  solar.go
subsystems/eps/cmd/: main.go
subsystems/mcp/: Dockerfile  handlers.py  main.py  openapi.yaml  requirements.txt  schema.py  server.py
subsystems/mdm/: Dockerfile  Makefile  bridge.py  bus_1553.c  cmd_handler.c  main.c  mdm  mdm.h  mdm_core.c  tlm_pack.c
subsystems/nas/: Dockerfile  go.mod  go.sum  recorder.go  replay.go  service.go  storage.go
subsystems/nas/cmd/: main.go
subsystems/robotics/: CMakeLists.txt  Dockerfile  bridge.py
subsystems/robotics/include/robotics/: controller.h  joint.h  kinematics.h  ssrms.h  trajectory.h  types.h
subsystems/robotics/src/: controller.cpp  joint.cpp  kinematics.cpp  main.cpp  ssrms.cpp  trajectory.cpp
subsystems/robotics/tests/: CMakeLists.txt  test_joint.cpp  test_kinematics.cpp
subsystems/thermal/: Dockerfile  active_loop.py  heaters.py  main.py  radiator.py  simulator.py
viz/dashboard/: Dockerfile  index.html  package.json  server.js
viz/dashboard/src/: openmct.js  telemetry.js
viz/godot/: project.godot
viz/godot/scenes/: main.tscn
viz/godot/scripts/: camera.gd  hud.gd  iss_model.gd  main.gd  telemetry_bridge.gd
