[workspace]
resolver = "2"
members = ["dynamics", "gnc"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-nats = "0.38"
chrono = { version = "0.4", features = ["serde"] }
nalgebra = { version = "0.33", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
prost = "0.13"
bytes = "1"
