[package]
name = "dynamics"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-nats = { workspace = true }
nalgebra = { workspace = true, features = ["serde-serialize"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
